@@ -1,3 +1,9 @@
+Sat Jul 13 15:33:33 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (bary_small_lshift): Functions moved to remove
+	  declaration.
+	  (bary_small_rshift): Ditto.
+
 Sat Jul 13 12:27:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* encoding.c (rb_enc_associate_index): fill new terminator length, not
